src/test/deca/syntax/valid/extension/TabAssign.deca
// Description:
//    Tableau mal assigné
//  Problème réglé avec la grammaire contextuelle

{
    int[] a = {1, 2, 3};
    a = 2;
}

