src/test/deca/syntax/invalid/extension/TabMalInit.deca
// Description:
//    Tableau mal initialisé
//

{
    int[] a = [1, 2, 3];
}
